# python-introduction-to-statistical-learning

./: 00_playground.ipynb  01_intro.ipynb  02_statistical_learning.ipynb  03_linear_regression.ipynb  04_logistic_regression.ipynb  Makefile  README.md  pyproject.toml
docs/: 00_playground.md  01_intro.md  02_statistical_learning.md  03_linear_regression.md  04_logistic_regression.md
