[tool.poetry]
name = "python-introduction-to-statistical-learning"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.6"
jupyterlab-code-formatter = "^2.2.1"
ipywidgets = "^8.1.2"
black = "^24.3.0"
isort = "^5.13.2"
matplotlib = "^3.8.4"
numpy = ">=1.7.1,<1.25"
pandas = ">0.20,<=1.9"
statsmodels = "^0.14.1"
islp = "^0.3.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
